Fixed to run as JAR, filled README.md with basic information