@@ -1,62 +1,19 @@
 # alerting-node
 
-This project uses Quarkus, the Supersonic Subatomic Java Framework.
+## Настроить окружение
 
-If you want to learn more about Quarkus, please visit its website: https://quarkus.io/ .
+* Java 21
+* Gradle 8.5
 
-## Running the application in dev mode
+## Локальная проверка
 
-You can run your application in dev mode that enables live coding using:
+Работоспособность приложения проверяет этот
+тест: [AlertingNodeEntryPointIT.java](src/test/java/org/realerting/AlertingNodeEntryPointIT.java)
 
-```shell script
-./gradlew quarkusDev
-```
+Также доступные конфигурации запуска можно найти в [.run](.run). Intellij IDEA подтянет их при открытии проекта.
 
-> **_NOTE:_**  Quarkus now ships with a Dev UI, which is available in dev mode only at http://localhost:8080/q/dev/.
+## Установка на VM
 
-## Packaging and running the application
-
-The application can be packaged using:
-
-```shell script
-./gradlew build
-```
-
-It produces the `quarkus-run.jar` file in the `build/quarkus-app/` directory.
-Be aware that it’s not an _über-jar_ as the dependencies are copied into the `build/quarkus-app/lib/` directory.
-
-The application is now runnable using `java -jar build/quarkus-app/quarkus-run.jar`.
-
-If you want to build an _über-jar_, execute the following command:
-
-```shell script
-./gradlew build -Dquarkus.package.type=uber-jar
-```
-
-The application, packaged as an _über-jar_, is now runnable using `java -jar build/*-runner.jar`.
-
-## Creating a native executable
-
-You can create a native executable using:
-
-```shell script
-./gradlew build -Dquarkus.package.type=native
-```
-
-Or, if you don't have GraalVM installed, you can run the native executable build in a container using:
-
-```shell script
-./gradlew build -Dquarkus.package.type=native -Dquarkus.native.container-build=true
-```
-
-You can then execute your native executable with: `./build/alerting-node-1.0.0-SNAPSHOT-runner`
-
-If you want to learn more about building native executables, please consult https://quarkus.io/guides/gradle-tooling.
-
-## Provided Code
-
-### RESTEasy Reactive
-
-Easily start your Reactive RESTful Web Services
-
-[Related guide section...](https://quarkus.io/guides/getting-started-reactive#reactive-jax-rs-resources)
+* Собрать jar через `./gradlew clean build`
+* Загрузить на виртуальную машину
+* На ней же запустить через `java --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -jar <path_to_jar> <path_to_config_yaml>`
